--- a/calendar/calendar.html
+++ b/calendar/calendar.html
@@ -38,18 +38,17 @@
         <div class="pages-flex">
             <nav class="pages">
                 <a href="../index.html">Página Principal</a>
-                <a href="page.html?page_name=Apontamentos&user_page=false">Apontamentos</a>
-                <a href="page.html?page_name=Avisos&user_page=false">Avisos</a>
+                <a href="../page/page.html?page_name=Apontamentos&user_page=false">Apontamentos</a>
+                <a href="../page/page.html?page_name=Avisos&user_page=false">Avisos</a>
                 <a href="../calendar/calendar.html">Calendário</a>
                 <a href="../gpt/gpt.html">ChatGpt</a>
-                <a href="page.html?page_name=Projeto&user_page=false">Projeto</a>
-
+                <a href="../page/page.html?page_name=Projeto&user_page=false">Projeto</a>
                 <br>
-                <a class="a" href="page.html?page_name=André&user_page=true">André</a>
-                <a class="c" href="page.html?page_name=Constança&user_page=true">Constança</a>
-                <a class="h" href="page.html?page_name=Helena&user_page=true">Helena</a>
-                <a class="ma" href="page.html?page_name=Maria&user_page=true">Maria</a>
-                <a class="mm" href="page.html?page_name=Martim&user_page=true">Martim</a>
+                <a class="a" href="../page/page.html?page_name=André&user_page=true">André</a>
+                <a class="c" href="../page/page.html?page_name=Constança&user_page=true">Constança</a>
+                <a class="h" href="../page/page.html?page_name=Helena&user_page=true">Helena</a>
+                <a class="ma" href="../page/page.html?page_name=Maria&user_page=true">Maria</a>
+                <a class="mm" href="../page/page.html?page_name=Martim&user_page=true">Martim</a>
             </nav>
         </div>
 
