--- a/gpt/gpt.html
+++ b/gpt/gpt.html
@@ -31,7 +31,7 @@
                 <li id="ma" onclick="selectUser('Maria')">Maria</li>
                 <li id="mm" onclick="selectUser('Martim')">Martim</li>
             </ul>
-            <button id="close" onclick="closePopup()">X</button>
+            <button class="close" onclick="closePopup()">X</button>
         </div>
     </header>
 
