--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
                 <li id="ma" onclick="selectUser('Maria')">Maria</li>
                 <li id="mm" onclick="selectUser('Martim')">Martim</li>
             </ul>
-            <button id="close" onclick="closePopup()">X</button>
+            <button class="close" onclick="closePopup()">X</button>
         </div>
     </header>
 
