--- a/calendar/calendar.html
+++ b/calendar/calendar.html
@@ -36,7 +36,7 @@
 
     <main>
         <div class="pages-flex">
-            <nav class="pages">
+            <nav class="pages" id="menu-pages">
                 <a href="../index.html">Página Principal</a>
                 <a href="../page/page.html?page_name=Apontamentos&user_page=false">Apontamentos</a>
                 <a href="../page/page.html?page_name=Avisos&user_page=false">Avisos</a>
@@ -60,6 +60,11 @@
     </main>
 
     <footer>
+        <div class="menu-btn" onclick="openMenu()">
+            <span class="line"></span>
+            <span class="line"></span>
+            <span class="line"></span>
+        </div>
         <div id="clock"></div>
     </footer>
 </body>
